# CosmicMuffin

./: .buildinfo  README.md  api_user.html  cosmicmuffin.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: CI.yaml  build_and_upload_conda_packages.yaml  sphinx_docs_to_gh_pages.yaml
_modules/: index.html
_modules/cosmicmuffin/: saludo.html  suma.html
_sources/: api_user.rst.txt  cosmicmuffin.rst.txt  index.rst.txt  modules.rst.txt
_sources/contents/: introduction.md.txt  suma.ipynb.txt
autosummary/: cosmicmuffin.hola.html  cosmicmuffin.suma.html
contents/: introduction.html  suma.html
cosmicmuffin/: __init__.py  _version.py  saludo.py  suma.py
cosmicmuffin/tests/: test_suma.py
devtools/: docs_env.yaml  test_env.yaml
devtools/conda-build/: meta.yaml
docs/: conf.py
docs/autosummary/: cosmicmuffin.hola.rst  cosmicmuffin.suma.rst
sandbox/: Test.ipynb
