[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "cosmicmuffin"
description = "A short description of the project"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "UIBCDF Lab", email = "uibcdf@gmail.com" }
]
license = { text = "MIT" }
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8.0,<3.11.0"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
]

# Update the urls once the hosting is set up.
[project.urls]
"Source" = "https://github.com/uibcdf/CosmicMuffin/"
"Documentation" = "https://uibcdf.org/CosmicMuffin"

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner"
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]
cosmicmuffin = [
    "py.typed"
]
"cosmicmuffin.data" = ["**"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "0.0.1"

[tool.versioningit.write]
file = "cosmicmuffin/_version.py"

